--- a/application.yml
+++ b/application.yml
@@ -3,4 +3,5 @@ eureka:
     serviceUrl:
       defaultZone: "http://localhost:8761/eureka"
   instance:
+    hostname: localhost
     prefer-ip-address: true
