--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,8 +1,7 @@
 eureka:
-  instance:
-    prefer-ip-address: true
   client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+    serviceUrl:
+      defaultZone: "http://localhost:8761/eureka"
+  instance:
+    hostname: localhost
+    prefer-ip-address: true
